styles.css
/*VARIABLES*/

:root {
  --bg: #f5efe7;
  --bg-soft: #e9e2d8;

  --nav-bg: rgba(245, 239, 231, 0.8);
  --nav-border: rgba(0, 0, 0, 0.03);

  --green: #7f9464;
  --green-light: #d7dec8;

  --accent: #b96d3a;
  --accent-dark: #5b3923;

  --text: #3a2b22;
  --text-soft: #66564a;

  --white: #fffdf9;

  --shadow: 0 10px 30px rgba(0, 0, 0, 0.06);

  --radius: 30px;

  --toggle-bg: transparent;
  --toggle-text: var(--text);
  --hamburger: #5b3923;
  --fondo-image: #f5efe7;
}

/*RESET*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Inter", sans-serif;
  background: var(--bg);
  color: var(--text);
  overflow-x: hidden;
}
.skip-link {
  position: absolute;
  left: -9999px;
}

.skip-link:focus {
  left: 20px;
  top: 20px;

  background: white;

  padding: 12px 20px;

  z-index: 9999;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

a {
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
section {
  padding: 110px 0;
}

/*NAVBAR*/

.custom-navbar {
  background: var(--nav-bg);
  backdrop-filter: blur(18px);

  padding: 8px 0;

  border-bottom: 1px solid var(--nav-border);

  box-shadow:
    0 8px 25px rgba(51, 49, 49, 0.35),
    0 1px 0 rgba(214, 138, 87, 0.08);
}

.logo {
  font-size: 2rem;
  font-weight: 800;
  color: var(--accent-dark);
}

.logo span {
  color: var(--accent);
}

.navbar-nav {
  align-items: center;
  gap: 15px;
}

.nav-link {
  color: var(--text) !important;
  font-weight: 500;
  transition: color 0.3s;
}

.nav-link:hover {
  color: var(--accent) !important;
}

.btn-nav {
  background: var(--accent);
  color: white !important;
  padding: 12px 22px !important;
  border-radius: 999px;
  transition: background 0.3s;
}

.btn-nav:hover {
  background: var(--accent) !important;
}

#cambiarModo {
  background-color: var(--toggle-bg);
  color: var(--toggle-text);
  border: none;
  border-radius: 999px;
  padding: 10px 14px;
  margin-left: 15px;
  transition: all 0.3s ease;
}

#cambiarModo:hover {
  background-color: rgba(214, 138, 87, 0.18);
  transform: translateY(-2px);
}

.navbar-toggler {
  color: var(--accent);
  border: 2px;
  background-color: var(--bg-soft);
}
.navbar-toggler {
  border-color: var(--accent);
}

.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='%23b96d3a' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}

/* TOGGLE-BTN */

label {
  width: 100px;
  height: 50px;
  position: relative;
  display: block;
  background: var(--accent);
  border-radius: 180px;
  box-shadow:
    inset 0px 2xp 5px rgba(0, 0, 0, 0.4),
    inset 0px -2px 5px rgba(255, 255, 255, 0.4);
  cursor: pointer;
  transition: 0.3s;
}

label::after {
  content: "";
  width: 40px;
  height: 40px;
  position: absolute;
  top: 5px;
  left: 10px;
  background: linear-gradient(180deg, #ffcc89, #d8860b);
  border-radius: 180px;
  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
  transition: 0.3s;
}
input {
  width: 0;
  height: 0;
  visibility: hidden;
}

input:checked + label {
  background-color: #242424;
}

input:checked + label::after {
  left: 49px;
  transform: translateX(5%);
  background: linear-gradient(180deg, #777, #3a3a3a);
}

label:active:after {
  width: 20px;
}

label img {
  position: absolute;
  width: 30px;
  top: 10px;
  margin-left: 5%;
  z-index: 100;
}
label img.sun {
  left: 10px;
  fill: #fff;
  transition: 0.3s;
  filter: invert(1);
}

label img.moon {
  left: 30px;
  fill: #7e7e7e;
  transition: 0.3s;
  margin-left: 25%;
  filter: invert(1);
}

input:checked + label img.sun {
  fill: #7e7e7e;
}
input:checked + label img.moon {
  fill: #fff;
}

/*HERO*/

.hero-section {
  min-height: 100vh;
  display: flex;
  align-items: center;
  padding-top: 120px;
}

.hero-text small {
  display: block;
  margin-bottom: 25px;
  color: var(--accent);
  font-weight: 700;
  letter-spacing: 1px;
}

.hero-text h1 {
  max-width: 700px;
  margin-bottom: 30px;
  font-size: 4.8rem;
  line-height: 1.05;
  letter-spacing: -3px;
  font-weight: 800;
}

.hero-text h1 span {
  color: var(--accent);
}

.hero-text p {
  max-width: 580px;
  margin-bottom: 40px;
  font-size: 1.1rem;
  line-height: 1.9;
  color: var(--text-soft);
}
.puntos {
  color: var(--accent);
}

/*BOTONES HERO*/

.hero-buttons {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  margin-bottom: 35px;
}

.btn-custom {
  background: var(--accent);
  color: white;
  padding: 16px 28px;
  border-radius: 999px;
  font-weight: 600;
  transition: 0.3s;
  display: inline-block;
  align-content: center;
}

.btn-custom:hover {
  transform: translateY(-4px);
  background: var(--accent-dark);
  color: white;
}

.btn-outline-custom {
  border: 3px solid #d7cfc6;
  color: var(--text);
  padding: 16px 28px;
  border-radius: 32px;
  font-weight: 600;
  transition: 0.3s;
}

.btn-outline-custom:hover {
  background: white;
  color: var(--accent);
}

/*REDES SOCIALES*/

.social-links {
  display: flex;
  gap: 25px;
  width: 40%;
  overflow: hidden;
  margin-left: 30px;
}

.social-links a {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 6px;
  color: var(--text-soft);
  font-weight: 600;
  opacity: 0.6;
  transition:
    opacity 0.3s ease,
    transform 0.15s ease;
}

.social-links img {
  width: 36px;
  height: auto;
  display: block;
}

.social-links a:hover {
  color: var(--accent);
  opacity: 1;
  transform: translateX(3px);
  filter: drop-shadow(0.7px 0.7px 0 var(--text));
}

/*HERO IMAGE*/

.hero-image-wrapper {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 14%;
}

.blob {
  position: absolute;
  width: 480px;
  height: 480px;
  z-index: 1;
}
/* ... */

